--- a/Users/package.json
+++ b/Users/package.json
@@ -18,7 +18,9 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
-    "tailwindcss": "^4.1.17"
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.17",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
