--- a/Users/package.json
+++ b/Users/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.11.0",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "face-api.js": "^0.22.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
