--- a/TunePal/package.json
+++ b/TunePal/package.json
@@ -17,13 +17,14 @@
     "console-table-printer": "^2.15.0",
     "cookie": "^1.1.1",
     "decamelize": "^1.2.0",
+    "dotenv": "^17.2.3",
     "eventemitter3": "^4.0.7",
     "express": "^5.2.1",
     "has-flag": "^4.0.0",
     "js-tiktoken": "^1.0.21",
     "jsonwebtoken": "^9.0.3",
     "langsmith": "^0.4.2",
-    "mongoose": "^9.0.2",
+    "mongoose": "^9.1.1",
     "mustache": "^4.2.0",
     "p-finally": "^1.0.0",
     "p-queue": "^6.6.2",
@@ -35,7 +36,7 @@
     "socket.io": "^4.8.3",
     "supports-color": "^7.2.0",
     "uuid": "^10.0.0",
-    "zod": "^4.2.1"
+    "zod": "^4.3.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
