--- a/TunePal/package.json
+++ b/TunePal/package.json
@@ -7,6 +7,7 @@
     "@langchain/core": "^1.1.8",
     "@langchain/google-genai": "^2.1.3",
     "@langchain/langgraph": "^1.0.7",
+    "@langchain/openai": "^1.2.0",
     "ansi-styles": "^5.2.0",
     "axios": "^1.13.2",
     "base64-js": "^1.5.1",
@@ -23,6 +24,7 @@
     "has-flag": "^4.0.0",
     "js-tiktoken": "^1.0.21",
     "jsonwebtoken": "^9.0.3",
+    "langchain": "^1.2.3",
     "langsmith": "^0.4.2",
     "mongoose": "^9.1.1",
     "mustache": "^4.2.0",
