feat: update Dockerfiles for multi-stage builds and optimize service configurations

--- a/Users/Dockerfile
+++ b/Users/Dockerfile
@@ -1,19 +1,13 @@
-# ---------- Build stage ----------
+# Build stage
 FROM node:20-alpine AS build
-
 WORKDIR /app
-
-# install deps first (better cache)
 COPY package*.json ./
-RUN npm ci
-
-# copy source
+RUN npm install
 COPY . .
-
-# build args (API URL)
-ARG VITE_API_AUTH_URL
-ENV VITE_API_AUTH_URL=$VITE_API_AUTH_URL
-
-# build react
 RUN npm run build
 
+# Production stage
+FROM nginx:stable-alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
