--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mongodb:
     image: mongo:latest
     ports:
-      - "27017:27017"
+      - "${MONGODB_PORT}:27017"
     volumes:
       - mongodb_data:/data/db
 
@@ -12,16 +12,16 @@ services:
     image: rabbitmq:3-management
     ports:
       - "5672:5672"
-      - "15672:15672"
+      - "${RABBITMQ_MANAGEMENT_PORT}:15672"
 
   auth-service:
     build: ./auth
     ports:
-      - "3001:3000"
+      - "${AUTH_SERVICE_PORT}:3000"
     environment:
-      - MONGO_URI=mongodb://mongodb:27017/auth
-      - RABBITMQ_URL=amqp://rabbitmq:5672
-      - JWT_SECRET=your_jwt_secret
+      - MONGO_URI=${MONGO_URI}/auth
+      - RABBITMQ_URL=${RABBITMQ_URL}
+      - JWT_SECRET=${JWT_SECRET}
     depends_on:
       - mongodb
       - rabbitmq
@@ -29,18 +29,18 @@ services:
   music-service:
     build: ./music
     ports:
-      - "3002:3000"
+      - "${MUSIC_SERVICE_PORT}:3000"
     environment:
-      - MONGO_URI=mongodb://mongodb:27017/music
-      - GEMINI_API_KEY=your_gemini_key
+      - MONGO_URI=${MONGO_URI}/music
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
     depends_on:
       - mongodb
 
   notification-service:
     build: ./notification
     environment:
-      - MONGO_URI=mongodb://mongodb:27017/notifications
-      - RABBITMQ_URL=amqp://rabbitmq:5672
+      - MONGO_URI=${MONGO_URI}/notifications
+      - RABBITMQ_URL=${RABBITMQ_URL}
     depends_on:
       - mongodb
       - rabbitmq
@@ -48,17 +48,17 @@ services:
   tunepal-service:
     build: ./TunePal
     ports:
-      - "3005:3005"
+      - "${TUNEPAL_SERVICE_PORT}:3005"
     environment:
-      - MONGO_URI=mongodb://mongodb:27017/tunepal
-      - GEMINI_API_KEY=your_gemini_key
+      - MONGO_URI=${MONGO_URI}/tunepal
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
     depends_on:
       - mongodb
 
   artist-frontend:
     build: ./Artist
     ports:
-      - "5173:80"
+      - "${ARTIST_FRONTEND_PORT}:80"
     depends_on:
       - auth-service
       - music-service
@@ -66,7 +66,7 @@ services:
   user-frontend:
     build: ./Users
     ports:
-      - "5174:80"
+      - "${USER_FRONTEND_PORT}:80"
     depends_on:
       - auth-service
       - music-service
